force-app/main/default/objects/NST_Opty__c/NST_Opty__c.object-meta.xml
<CustomObject>
    <label>NST Qualitative</label>
    <nameField>
        <label>NST Criteria</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NSTs Opty</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>