force-app/main/default/objects/NST_Opty__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>NSTs Opty</relationshipLabel>
    <relationshipName>NSTs_Opty</relationshipName>
    <type>Lookup</type>
</CustomField>