force-app/main/default/objects/NST_Opty__c/fields/CAA__c.field-meta.xml
<CustomField>
    <fullName>CAA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CAA</label>
    <referenceTo>CAA__c</referenceTo>
    <relationshipLabel>NSTs Opty</relationshipLabel>
    <relationshipName>NSTs_Opty</relationshipName>
    <type>Lookup</type>
</CustomField>