force-app/main/default/objects/NST_Opty__c/fields/Check_None__c.field-meta.xml
<CustomField>
    <fullName>Check_None__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Check_None</label>
    <type>Checkbox</type>
</CustomField>