force-app/main/default/objects/NST_Opty__c/fields/Final_Level_At__c.field-meta.xml
<CustomField>
    <fullName>Final_Level_At__c</fullName>
    <formula>IF( NST_Criteria_Formula__c == &quot;Agunan Atas nama beberapa nama (pemohon dan keluarga)&quot;, &quot;Sesuai CAA&quot;, CAA__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Level At</label>
    <type>Text</type>
</CustomField>