force-app/main/default/objects/NST_Opty__c/fields/Is_Deleted_By_CA__c.field-meta.xml
<CustomField>
    <fullName>Is_Deleted_By_CA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is NST Deleted by CA</description>
    <label>Is_Deleted_By_CA</label>
    <type>Checkbox</type>
</CustomField>