force-app/main/default/objects/NST_Opty__c/fields/Kena__c.field-meta.xml
<CustomField>
    <fullName>Kena__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Kena</label>
    <type>Checkbox</type>
</CustomField>