force-app/main/default/objects/NST_Opty__c/fields/NST_M_C__c.field-meta.xml
<CustomField>
    <fullName>NST_M_C__c</fullName>
    <description>Check Marketing or Credit</description>
    <formula>TEXT( NST__r.M_C__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NST M/C</label>
    <type>Text</type>
</CustomField>