force-app/main/default/objects/NST_Opty__c/fields/NST_Type_Formula__c.field-meta.xml
<CustomField>
    <fullName>NST_Type_Formula__c</fullName>
    <formula>IF(TEXT( NST__r.NST_Type__c ) == &quot;Qualitative&quot;, &quot;Risk&quot;, TEXT( NST__r.NST_Type__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NST Type</label>
    <type>Text</type>
</CustomField>