force-app/main/default/objects/NST_Opty__c/fields/Status_Input_Survey__c.field-meta.xml
<CustomField>
    <fullName>Status_Input_Survey__c</fullName>
    <formula>Survey__r.Status_Input_Survey__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Input Survey</label>
    <type>Text</type>
</CustomField>