force-app/main/default/objects/NST_Opty__c/fields/Survey__c.field-meta.xml
<CustomField>
    <fullName>Survey__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Survey</label>
    <referenceTo>Survey__c</referenceTo>
    <relationshipLabel>NSTs Opty</relationshipLabel>
    <relationshipName>NSTs_Opty</relationshipName>
    <type>Lookup</type>
</CustomField>