force-app/main/default/objects/NST_Opty__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>NST__c</columns>
    <columns>Kena__c</columns>
    <columns>Application__c</columns>
    <columns>NST_Type_Formula__c</columns>
    <columns>IsApproved__c</columns>
    <columns>User__c</columns>
    <columns>Approver_Role__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>